output public path

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -14,11 +14,11 @@
 	<div style="font-size: 14px; font-weight: bold; width: 100%; text-align: center;">Loading...</div>
 </app-main>
 
-<link rel="stylesheet" type="text/css" href="vendor.bundle.css"/>
+<link rel="stylesheet" type="text/css" href="/web-app/vendor.bundle.css"/>
 
-<script src="polyfills.bundle.js"></script>
-<script src="vendor.bundle.js"></script>
-<script src="bootstrap.bundle.js"></script>
+<script src="/web-app/polyfills.bundle.js"></script>
+<script src="/web-app/vendor.bundle.js"></script>
+<script src="/web-app/bootstrap.bundle.js"></script>
 
 </body>
 </html>
