--- a/src/static/index.html
+++ b/src/static/index.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	<base href="/">
+	<title>GoCI - Continuous Integration System</title>
 	<link rel="shortcut icon" href="favicon.ico" />
 	<link rel="icon" type="image/png" href="favicon.png">
 </head>
